# taskcluster

./: .all-contributorsrc  .codecov.yml  .dockerignore  .env  .eslintignore  .eslintrc.js  .eslintrc.yml  .git-version  .gitattributes  .gitignore  .go-version  .golangci-lint-version  .golangci.yml  .goreleaser.yaml  .mocharc.yml  .neutrinorc.js  .nycrc.yml  .pre-commit-config.yaml  .releaserc  .taskcluster.yml  .travis.yml  .travis_rename_releases.sh  .yarnrc  .yarnrc.yml  AUTHORS  CHANGELOG.md  CHANGELOG.mdx  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.mdx  Dockerfile  EXPECTATIONS.md  Gopkg.toml  Makefile  README.html  README.md  README.mdx  SECURITY.md  SECURITY.mdx  TEST.md  (+241 more)
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
@types/: db.d.ts  globals.d.ts
Godeps/: Godeps.json
_upload_release/: upload.go
apis/: codegen.go  codegen_test.go  doc.go  provider.go  provider_test.go  services.go  services_test.go
auth/: auth.go  auth_examples_test.go  auth_test.go  test_setup_test.go  types.go
authevents/: authevents.go  types.go
awsprovisioner/: awsprovisioner.go  types.go
awsprovisionerevents/: awsprovisionerevents.go  types.go
cfg/: cfg.go  cfg_test.go  providerconfig.go  providerconfig_test.go  providerworkerconfig.go  providerworkerconfig_test.go  runnerconfig.go  runnerconfig_test.go  test-config.yml  workerconfig.go  workerconfig_test.go  workerimplconfig.go  workerimplconfig_test.go
changelog/: 1376.md  1403.md  1486.md  (+1896 more)
clients/client-py/: .gitignore  .taskcluster.yml  .travis.yml  CONTRIBUTING.md  Makefile  README.html  README.md  README.mdx  apis.json  devDep.py  genDocs.py  lint.sh  pyproject.toml  release.sh  requirements.txt  setup.cfg  setup.py  test.sh  tox.ini
clients/client-py/taskcluster/: __init__.py  _client_importer.py  auth.py  authevents.py  awsprovisioner.py  awsprovisionerevents.py  client.py  download.py  ec2manager.py  exceptions.py  github.py  githubevents.py  helper.py  hooks.py  hooksevents.py  index.py  login.py  notify.py  notifyevents.py  pulse.py  purgecache.py  purgecacheevents.py  queue.py  queueevents.py  retry.py  secrets.py  treeherderevents.py  upload.py  utils.py  workermanager.py  workermanagerevents.py
clients/client-py/taskcluster/aio/: __init__.py  _client_importer.py  asyncclient.py  asyncutils.py  auth.py  authevents.py  awsprovisioner.py  awsprovisionerevents.py  download.py  ec2manager.py  github.py  githubevents.py  hooks.py  hooksevents.py  index.py  login.py  notify.py  notifyevents.py  pulse.py  purgecache.py  purgecacheevents.py  queue.py  queueevents.py  reader_writer.py  retry.py  secrets.py  treeherderevents.py  upload.py  workermanager.py  workermanagerevents.py
clients/client-py/test/: base.py  conftest.py  public.key  secret.key  test_async.py  test_client.py  test_exceptions.py  test_imports.py  test_upload_download.py  test_upload_download_real.py  test_utils.py
clients/client-py/test/aio/: test_client.py  test_reader_writer.py  test_upload_download.py  test_upload_download_real.py
clients/client-py/test/base/: __init__.py
clients/client-rust/: Cargo.toml  README.md
clients/client-rust/client/: Cargo.toml  README.md
clients/client-rust/client/src/: b64.rs  client.rs  credentials.rs  lib.rs  retry.rs  util.rs
clients/client-rust/download/: Cargo.toml  README.md
clients/client-rust/download/src/: artifact.rs  factory.rs  geturl.rs  hashing.rs  lib.rs  object.rs  service.rs  test_helpers.rs
clients/client-rust/integration_tests/: Cargo.toml
clients/client-rust/integration_tests/tests/: against_real_deployment.rs  upload_download.rs
clients/client-rust/src/: client.rs  credentials.rs  lib.rs  test.rs
clients/client-rust/src/download/: factory.rs  mod.rs
clients/client-rust/src/upload/: factory.rs  mod.rs
clients/client-rust/tests/: upload_download.rs
clients/client-rust/upload/: Cargo.toml  README.md
clients/client-rust/upload/src/: factory.rs  hashing.rs  lib.rs  service.rs
workers/generic-worker-rs/: Cargo.toml
workers/generic-worker-rs/src/: artifacts.rs  config.rs  engine.rs  errorreport.rs  errors.rs  expose.rs  fileutil.rs  garbagecollector.rs  gdm3.rs  graceful.rs  host.rs  interactive.rs  kc.rs  lib.rs  livelog.rs  logininfo.rs  main.rs  metrics.rs  mock_tc.rs  model.rs  multiuser.rs  resolvetask.rs  runtime.rs  sentry.rs  taskstatus.rs  tc.rs  tcproxy.rs  win32.rs  worker.rs  workerproto.rs
workers/generic-worker-rs/src/features/: abort.rs  artifact_upload.rs  backing_log.rs  chain_of_trust.rs  command_executor.rs  command_generator.rs  d2g.rs  interactive.rs  livelog.rs  loopback_audio.rs  loopback_video.rs  max_run_time.rs  metadata.rs  mod.rs  mounts.rs  os_groups.rs  payload_validator.rs  rdp.rs  resource_monitor.rs  run_as_administrator.rs  run_as_current_user.rs  task_timer.rs  taskcluster_proxy.rs
workers/generic-worker-rs/src/process/: darwin_agent.rs  execute.rs  insecure.rs  mod.rs  monitor.rs  multiuser.rs  unix.rs  windows.rs
workers/generic-worker-rs/tests/: artifact_test.rs  d2g_test.rs  expose_test.rs  feature_test.rs  integration_test.rs  mount_test.rs  multiuser_test.rs  unit_test.rs
workers/rust/container/: Cargo.toml
workers/rust/container/src/: execution.rs  executor.rs  lib.rs  task.rs
workers/rust/lib-worker/: Cargo.toml
workers/rust/lib-worker/src/: claim.rs  executor.rs  lib.rs  main.rs  process.rs  task.rs  test.rs  testing.rs  worker.rs
workers/rust/lib-worker/src/artifact/: mod.rs
workers/rust/lib-worker/src/claim/: long_poll.rs  mod.rs  task_claim.rs  work_claimer.rs
workers/rust/lib-worker/src/claiming/: mod.rs
workers/rust/lib-worker/src/execute/: creds_container.rs  execute.rs  mod.rs  payload.rs  reclaim.rs  types.rs
workers/rust/lib-worker/src/log/: mod.rs
workers/rust/lib-worker/src/tc/: creds_container.rs  mod.rs  queue.rs  services.rs
workers/rust/lib-worker/src/testing/: artifact.rs  execute.rs  log.rs  logger.rs  mod.rs  services.rs  test_task.rs
workers/rust/lib-worker/src/workerproto/: capabilities.rs  messages.rs  mod.rs  protocol.rs  transport.rs
(+7699 files in other folders)
