[package]
name = "taskcluster"
version = "95.0.2"
authors = ["Wander Lairson Costa <wander.lairson@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "API client for Taskcluster; typically used via `taskcluster`"
repository = "https://github.com/taskcluster/taskcluster"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
base64 = "0.22.0"
hawk = "5.0.0"
backon = "1.6"
slugid = "1.0.0"
percent-encoding = "2.3.2"
tokio = { version = "1.48", features = ["macros", "time"] }
chrono = { version = "0.4.42", features = ["serde"] }
hmac-sha256 = "1.1.12"

[dev-dependencies]
httptest = "0.16"
lazy_static = "1.4.0"
