[package]
name = "taskcluster"
version = "96.2.3"
authors = ["Wander Lairson Costa <wander.lairson@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "API client for Taskcluster; typically used via `taskcluster`"
repository = "https://github.com/taskcluster/taskcluster"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.0"
hawk = "5.0.0"
backon = "1.6"
slugid = "1.0.0"
percent-encoding = "2.3.2"
tokio = { version = "1.49", features = ["macros", "time"] }
chrono = { version = "0.4.43", features = ["serde"] }
hmac-sha256 = "1.1.13"

[dev-dependencies]
httptest = "0.16"
lazy_static = "1.4.0"
