[package]
name = "taskcluster-download"
version = "92.0.0"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Taskcluster Download Support"
repository = "https://github.com/taskcluster/taskcluster"

[dependencies]
taskcluster = { version = "92.0.0", path = "../client" }
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli"] }
serde_json = "1.0.145"
serde = "1.0.228"
tokio = { version = "1.48", features = ["macros", "time", "fs"] }
tokio-util = { version = "0.7.16", features = ["codec", "io"] }
futures-util = "0.3"
sha2 = "0.10.9"

[dev-dependencies]
httptest = "0.16"
tempfile = "3"
flate2 = "1"
