[package]
name = "taskcluster-download"
version = "96.2.0"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Taskcluster Download Support"
repository = "https://github.com/taskcluster/taskcluster"

[dependencies]
taskcluster = { version = "96.2.0", path = "../client" }
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json", "stream", "gzip", "brotli"] }
serde_json = "1.0.149"
serde = "1.0.228"
tokio = { version = "1.49", features = ["macros", "time", "fs"] }
tokio-util = { version = "0.7.18", features = ["codec", "io"] }
futures-util = "0.3"
sha2 = "0.10.9"

[dev-dependencies]
httptest = "0.16"
tempfile = "3"
flate2 = "1"
