[package]
name = "taskcluster-integration-tests"
publish = false
version = "44.16.3"
authors = ["Wander Lairson Costa <wander.lairson@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "API client for Taskcluster"

[dependencies]
# this crate contains only integration tests for the three other crates, so it
# has no non-dev dependencies

[dev-dependencies]
taskcluster = { version = "44.16.3", path = "../client" }
taskcluster-upload = { path = "../upload" }
taskcluster-download = { path = "../download" }
httptest = "0.15.3"
tempfile = "3"
ring = "*"
tokio = { version = "1.2", features = ["macros", "fs"] }
anyhow = "1.0"
slugid = "1.0.0"
serde_json = "1.0.48"
reqwest = { version = "0.11", features = ["json"] }
