[package]
name = "taskcluster-integration-tests"
publish = false
version = "92.0.0"
authors = ["Wander Lairson Costa <wander.lairson@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "API client for Taskcluster"

[dependencies]
# this crate contains only integration tests for the three other crates, so it
# has no non-dev dependencies

[dev-dependencies]
taskcluster = { version = "92.0.0", path = "../client" }
taskcluster-upload = { path = "../upload" }
taskcluster-download = { path = "../download" }
httptest = "0.16"
tempfile = "3"
ring = "0.17"
tokio = { version = "1.48", features = ["macros", "fs"] }
anyhow = "1.0"
slugid = "1.0.0"
serde_json = "1.0.145"
reqwest = { version = "0.12", features = ["json"] }
