[package]
name = "taskcluster-upload"
version = "100.2.0"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Taskcluster Upload Support"
repository = "https://github.com/taskcluster/taskcluster"

[dependencies]
taskcluster = { version = "100.2.0", path = "../client" }
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52", features = ["macros", "time", "fs"] }
tokio-util = { version = "0.7.18", features = ["codec", "io"] }
slugid = "1.0.0"
base64 = "0.22.0"
sha2 = "0.11.0"
base16ct = { version = "1.0", features = ["alloc"] }

[dev-dependencies]
httptest = "0.16"
tempfile = "3"
ring = "0.17"
