[package]
name = "taskcluster-lib-worker"
version = "0.1.0"
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2018"

[dependencies]
# temporarily use the local copy until #4890 lands
taskcluster = { path = "../../../clients/client-rust/client" }
taskcluster-upload = { path = "../../../clients/client-rust/upload" }
anyhow = "1"
async-trait = "0.1"
serde_json = "*"
serde = "*"
tokio = { version = "*", features = [ "rt", "rt-multi-thread", "macros", "time", "sync" ] }
futures = "*"
pin-project = "*"
slog = "2"
slog-term = "2"
slog-async = "2"
chrono = "0.4"
bytes = "*"
